--- a/Alp.Com.Igu/Alp.Com.Igu.csproj
+++ b/Alp.Com.Igu/Alp.Com.Igu.csproj
@@ -18,6 +18,8 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
     <PackageReference Include="protobuf-net.Core" Version="3.2.56" />
+    <PackageReference Include="Serilog" Version="4.3.1-dev-02385" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
