--- a/Alp.Com.Igu/Alp.Com.Igu.csproj
+++ b/Alp.Com.Igu/Alp.Com.Igu.csproj
@@ -13,6 +13,7 @@
     <Compile Remove="Utils\Touch.cs" />
     <Compile Remove="ViewModels\AnalisiBilletteViewModel.cs" />
     <Compile Remove="ViewModels\ImpostazioniViewModel.cs" />
+    <Compile Remove="Views\MainWindowView2.xaml.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +47,10 @@
     <None Remove="Images\settings 11 bianco.png" />
     <None Remove="Images\x_icon.png" />
     <None Remove="Views\AlpLOSMIgu.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Remove="Views\MainWindowView2.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -141,7 +146,12 @@
   <ItemGroup>
     <PackageReference Include="KSociety.Base.EventBusRabbitMQ" Version="0.0.40" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="protobuf-net.Core" Version="3.2.56" />
     <PackageReference Include="Serilog" Version="4.3.1-dev-02385" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
@@ -152,7 +162,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\crs-base\Crs.Base.CommonUtilsLibrary\Crs.Base.CommonUtilsLibrary.csproj" />
     <ProjectReference Include="..\Alp.Com.DataAccessLayer\Alp.Com.DataAccessLayer.csproj" />
   </ItemGroup>
 
